--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- use fontawesome icons -->
     <link rel="stylesheet" href="fontawesome-free-6.6.0-web/css/all.css">
+
+    <!-- load stylesheet -->
     <link rel="stylesheet" href="css/style.css">
+    
     <title>PDF Viewer</title>
-</head>x
+</head>
 <body>
+    <div class="top-bar">
+        <!-- next/prev buttons -->
+        <button id="prev-page" class="btn">
+            <i class="fas fa-arrow-circle-left"></i> Prev Page
+        </button>
+        <button id="next-page" class="btn">
+           Next Page <i class="fas fa-arrow-circle-right"></i>
+        </button>
+
+        <!-- pagination -->
+        <span class="page-info">
+            Page <span id="page-num"></span> of <span id="page-count"></span>
+        </span>
+    </div>
+
+    <!-- canvas -->
+     <canvas id="pdf-render"></canvas>
+
     
     <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
     <script src="js/main.js"></script>
