--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
         </span>
     </div>
 
-    <!-- canvas -->
+    <!-- display page -->
      <canvas id="pdf-render"></canvas>
 
-    
-    <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
-    <script src="js/main.js"></script>
+        <!-- load PDF.js as an ES6 module -->
+        <script type="module" src="js/main.js"></script>
 </body>
 </html>
